fix canvas bug on safari

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -48,7 +48,6 @@ a {
 }
 
 header {
-  position: relative;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -65,7 +64,9 @@ header {
   }
   canvas {
     position: absolute;
+    left: 0;
     width: 100%;
+    height: 100%;
     opacity: 0;
     transition: 0.03s all ease-out;
   }
